--- a/src/scss/animations/slide-animation.scss
+++ b/src/scss/animations/slide-animation.scss
@@ -1,4 +1,4 @@
-@mixin slide-animation($timeout: 0, $origin: -100%, $dest: 0) {
+@mixin slide-animation($timeout: 0, $origin: 0, $dest: 100%) {
 
   &.slide-animation-enter-active {
     animation: slide-animation $timeout;
@@ -10,11 +10,11 @@
 
   @keyframes slide-animation {
     0% {
-      height: 0;
+      height: $origin;
     }
 
     100% {
-      height: 100%;
+      height: $dest;
     }
   }
 
